--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -1,4 +1,3 @@
-<h1>Create profile</h1>
 {% extends 'base.html'%} {% block content %}
 <div class="container">
   <div class="row">
@@ -16,26 +15,17 @@
     </div>
 
     <!--Display profile photo-->
-    <div class="col-md-4">
-      {% if user.profile_pic_path %}
-      <img
-        src="{{url_for('static',filename=user.profile_pic_path)}}"
-        alt=""
-        class="img-thumbnail"
-      />
-      {%else%}
-      <p>No profile picture</p>
-      {% endif %} {% if user == current_user %}
+  
       <a href="{{url_for('main.update_profile',uname=user.username)}}"
         >Edit profile</a
       >
-      {% endif %} {% if user == current_user %}
+      {% if user == current_user %}
       <form
-        action="{{url_for('main.update_pic',uname=user.username)}}"
+        action="{{url_for('main.update_profile',uname=user.username)}}"
         method="post"
-        enctype="multipart/form-data"
+       
       >
-        <input type="file" name="photo" class="form-control" required />
+       
         <input type="submit" />
       </form>
       {% endif %}
