add categories on pitch module and delete categories module

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,2 +1,4 @@
-{%extends 'bootstrap/base.html'%} {%block navbar %}{%include 'navbar.html' %}{%
-endblock %}
+{%extends 'bootstrap/base.html'%}
+<!--nabar block -->
+{%block navbar%} {% include 'navbar.html'%} {%endblock%} {%block styles %}
+{%endblock %}
