--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,22 @@
-{%extends 'base.html'%} {%if title%}
-<title>{{title}}</title>
-{%else%}
-<title>Pitches</title>
-{%endif%} {% block content %}
-<h1>wweeelll</h1>
-{%endblock%}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>HelloWorld</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Latest compiled and minified CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous"
+    />
+  </head>
+
+  <body>
+    {%block navbar%}{% include 'navbar.html' %}{% endblock%} {% block content %}
+    <h1>wweeelll</h1>
+    {%endblock%}
+  </body>
+</html>
