--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -16,7 +16,7 @@
       <a class="navbar-brand" href="/"> Pitches </a>
     </div>
     <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav ">
         <li><a href="/">Home</a></li>
         
         {% if current_user.is_authenticated %}
