--- a/app/templates/pitches.html
+++ b/app/templates/pitches.html
@@ -4,13 +4,4 @@
 {% for category in category %}
 <option value="{{category.id}}">{{category.category_name}}</option>
 
-{% endfor %}
-
-<div class="container">
-  <div class="row">
-    <div class="col-md-2"></div>
-    <div class="col-md-8">{{wtf.quick_form(registration_form)}}</div>
-    <div class="col-md-2"></div>
-  </div>
-</div>
-{%endblock%}
+{% endfor %} {%endblock%}
