--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,27 +1,49 @@
-{% extends 'base.html'%} {% import 'bootstrap/wtf.html' as wtf%} {% block
-content %}
-<div class="container">
-  <div class="row">
-    <div class="col-md-2"></div>
-    <div class="col-md-8">
-      <!--Flash message -->
-      {% for message in get_flashed_messages() %}
-      <div class="alert alert-danger">
-        <button type="button" class="close" data-dismiss="alert">
-          &times;
-        </button>
-        {{ message }}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    crossorigin="anonymous"
+  />
+  {%extends 'base.html'%} {% block styles%}{{super()}}
+  <link
+    rel="stylesheet"
+    href="{{url_for('static',filename='css/style.css')}}"
+  />
+  {%endblock%}
+  <body>
+    {% import 'bootstrap/wtf.html' as wtf%} {% block content %}
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8" id="form-log">
+          <!--Flash message -->
+          {% for message in get_flashed_messages() %}
+          <div class="alert alert-danger">
+            <button type="button" class="close" data-dismiss="alert">
+              &times;
+            </button>
+            {{ message }}
+          </div>
+          {% endfor %}
+          <!-- Login form -->
+          {{wtf.quick_form(login_form)}}
+          <p>
+            Don't have an account?
+            <a href="{{url_for('auth.register')}}">Sign up here</a>
+          </p>
+        </div>
+        <div clas="col-md-2"></div>
       </div>
-      {% endfor %}
-      <!-- Login form -->
-      {{wtf.quick_form(login_form)}}
-      <p>
-        Don't have an account?
-        <a href="{{url_for('auth.register')}}">Sign up here</a>
-      </p>
     </div>
-    <div clas="col-md-2"></div>
-  </div>
-</div>
 
-{% endblock%}
+    {% endblock%}
+  </body>
+</html>
