--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,9 +1,36 @@
-{%extends 'base.html'%} {%import 'bootstrap/wtf.html' as wtf%} {%block content%}
-<div class="container">
-  <div class="row">
-    <div class="col-md-2"></div>
-    <div class="col-md-8">{{wtf.quick_form(registration_form)}}</div>
-    <div class="col-md-2"></div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    crossorigin="anonymous"
+  />
+  {%extends 'base.html'%} {% block styles%}{{super()}}
+  <link
+    rel="stylesheet"
+    href="{{url_for('static',filename='css/style.css')}}"
+  />
+  {%endblock%}  {%import 'bootstrap/wtf.html' as wtf%}
+  {%block content%}
+  <div class="container">
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+        <div class="container-fluid " id= "registerFrm">
+          <h3>LOGIN IN</h3>
+        {{wtf.quick_form(registration_form)}}
+      </div>
+      </div>
+      <div class="col-md-2"></div>
+    </div>
   </div>
-</div>
-{%endblock%}
+  {%endblock%}
+  </body>
+</html>
