--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -24,8 +24,9 @@
       <div class="col-md-2"></div>
       <div class="col-md-8">
         <div class="container-fluid " id= "registerFrm">
-          <h3>LOGIN IN</h3>
+          <h3>SIGN UP</h3>
         {{wtf.quick_form(registration_form)}}
+        </div>
       </div>
       </div>
       <div class="col-md-2"></div>
