--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -23,22 +23,27 @@
     <div class="container">
       <div class="row">
         <div class="col-md-2"></div>
-        <div class="col-md-8" id="form-log">
-          <!--Flash message -->
-          {% for message in get_flashed_messages() %}
-          <div class="alert alert-danger">
-            <button type="button" class="close" data-dismiss="alert">
-              &times;
-            </button>
-            {{ message }}
+
+        <div class="col-md-8">
+          <div class="container-fluid" id="form-log">
+            <h3>LOGIN IN</h3>
+
+            <!--Flash message -->
+            {% for message in get_flashed_messages() %}
+            <div class="alert alert-danger">
+              <button type="button" class="close" data-dismiss="alert">
+                &times;
+              </button>
+              {{ message }}
+            </div>
+            {% endfor %}
+            <!-- Login form -->
+            {{wtf.quick_form(login_form)}}
+            <p>
+              Don't have an account?
+              <a href="{{url_for('auth.register')}}">Sign up here</a>
+            </p>
           </div>
-          {% endfor %}
-          <!-- Login form -->
-          {{wtf.quick_form(login_form)}}
-          <p>
-            Don't have an account?
-            <a href="{{url_for('auth.register')}}">Sign up here</a>
-          </p>
         </div>
         <div clas="col-md-2"></div>
       </div>
