--- a/app/templates/new_pitch.html
+++ b/app/templates/new_pitch.html
@@ -1,9 +1,34 @@
-{%extends 'base.html'%} {%import 'bootstrap/wtf.html' as wtf%} {%block content%}
-<div class="container">
-  <div class="row">
-    <div class="col-md-2"></div>
-    <div class="col-md-8">{{wtf.quick_form(pitch_form)}}</div>
-    <div class="col-md-2"></div>
-  </div>
-</div>
-{%endblock%}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>HelloWorld</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Latest compiled and minified CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous"
+    />
+    {%extends 'base.html'%} {% block styles%}{{super()}}
+    <link
+      rel="stylesheet"
+      href="{{url_for('static',filename='css/style.css')}}"
+    />
+    {%endblock%}
+  </head>
+
+  <body>
+    {%import 'bootstrap/wtf.html' as wtf%} {%block content%}
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">{{wtf.quick_form(pitch_form)}}</div>
+        <div class="col-md-2"></div>
+      </div>
+    </div>
+    {%endblock%}
+  </body>
+</html>
