--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -1,44 +1,69 @@
-{% extends 'base.html'%} {% block content %}
-<div class="container">
-  <div class="row">
-    <!-- displaying  Username-->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>HelloWorld</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Latest compiled and minified CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous"
+    />
+    {%extends 'base.html'%} {% block styles%}{{super()}}
+    <link
+      rel="stylesheet"
+      href="{{url_for('static',filename='css/style.css')}}"
+    />
+    {%endblock%}
+  </head>
 
-    <div class="col-md-4">
-      <h3>{{user.username| capitalize}}</h3>
+  <body>
+    {% block content %}
+    <div class="container">
+      <div class="row">
+        <!-- displaying  Username-->
 
-      <!--Displaying user bio-->
-      {% if user.bio %}
-      <p>{{user.bio}}</p>
-      {%else%}
-      <p>{{user.username| capitalize}} has no bio</p>
-      {% endif %}
+        <div class="col-md-4">
+          <h3>{{user.username| capitalize}}</h3>
+
+          <!--Displaying user bio-->
+          {% if user.bio %}
+          <p>{{user.bio}}</p>
+          {%else%}
+          <p>{{user.username| capitalize}} has no bio</p>
+          {% endif %}
+        </div>
+
+        <!--Display profile photo-->
+        <div class="col-md-4">
+          {% if user.profile_pic_path %}
+          <img
+            src="{{url_for('static',filename=user.profile_pic_path)}}"
+            alt=""
+            class="img-thumbnail"
+          />
+          {%else%}
+          <p>No profile picture</p>
+          {% endif %} {% if user == current_user %}
+          <a href="{{url_for('main.update_profile',uname=user.username)}}"
+            >Edit profile</a
+          >
+          {% endif %} {% if user == current_user %}
+          <form
+            action="{{url_for('main.update_pic',uname=user.username)}}"
+            method="post"
+            enctype="multipart/form-data"
+          >
+            <input type="file" name="photo" class="form-control" required />
+            <input type="submit" />
+          </form>
+          {% endif %}
+        </div>
+      </div>
     </div>
-
-    <!--Display profile photo-->
-    <div class="col-md-4">
-      {% if user.profile_pic_path %}
-      <img
-        src="{{url_for('static',filename=user.profile_pic_path)}}"
-        alt=""
-        class="img-thumbnail"
-      />
-      {%else%}
-      <p>No profile picture</p>
-      {% endif %} {% if user == current_user %}
-      <a href="{{url_for('main.update_profile',uname=user.username)}}"
-        >Edit profile</a
-      >
-      {% endif %} {% if user == current_user %}
-      <form
-        action="{{url_for('main.update_pic',uname=user.username)}}"
-        method="post"
-        enctype="multipart/form-data"
-      >
-        <input type="file" name="photo" class="form-control" required />
-        <input type="submit" />
-      </form>
-      {% endif %}
-    </div>
-  </div>
-</div>
-{% endblock %}
+    {% endblock %}
+  </body>
+</html>
