style categories cards

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>HelloWorld</title>
+
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Latest compiled and minified CSS -->
@@ -34,9 +34,8 @@
               <div class="card-body">
                 <h4 class="card-title">SCIENCE PITCHES</h4>
                 <p class="card-text">
-                  loahdasjdsdbc mdvjalhfdakffv
-                  ksdjfksjdfns,dnflksdfnsdnfLDFloahdasjdsdbc mdvjalhfdakffv
-                  ksdjfksjdfns,dnflksdfnsdnfLDF
+                  Let's get this interesting with some interesting science ,
+                  shall we? Add or view more
                 </p>
                 <a
                   name=""
@@ -61,9 +60,8 @@
               <div class="card-body">
                 <h4 class="card-title">COMPUTING PITCHES</h4>
                 <p class="card-text">
-                  loahdasjdsdbc mdvjalhfdakffv
-                  ksdjfksjdfns,dnflksdfnsdnfLDFloahdasjdsdbc mdvjalhfdakffv
-                  ksdjfksjdfns,dnflksdfnsdnfLDF
+                  What would we do without world's the scrum master? Add or view
+                  more
                 </p>
                 <a
                   name=""
@@ -97,9 +95,7 @@
               <div class="card-body">
                 <h4 class="card-title">BUSINESS PITCHES</h4>
                 <p class="card-text">
-                  loahdasjdsdbc mdvjalhfdakffv
-                  ksdjfksjdfns,dnflksdfnsdnfLDFloahdasjdsdbc mdvjalhfdakffv
-                  ksdjfksjdfns,dnflksdfnsdnfLDF
+                  Get us more ideas to multiply my money! Add or view more
                 </p>
                 <a
                   name=""
@@ -124,9 +120,8 @@
               <div class="card-body">
                 <h4 class="card-title">FASHION PITCHES</h4>
                 <p class="card-text">
-                  loahdasjdsdbc mdvjalhfdakffv
-                  ksdjfksjdfns,dnflksdfnsdnfLDFloahdasjdsdbc mdvjalhfdakffv
-                  ksdjfksjdfns,dnflksdfnsdnfLDF
+                  I can only think of one thing that runs my pocket empty! Add
+                  or view more
                 </p>
                 <a
                   name=""
