--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -41,15 +41,15 @@
                   name=""
                   id="view"
                   class="btn btn-primary"
-                  href="/categories/computing"
+                  href="{{url_for("main.categories", categoryeach= "science")}}"
                   role="button"
-                  >VIEW PITCHESrr</a
+                  >VIEW PITCHES</a
                 >
                 <a
                   name=""
                   id="add"
                   class="btn btn-primary"
-                  href="#"
+                  href="/add"
                   role="button"
                   >ADD PITCH</a
                 >
@@ -67,7 +67,7 @@
                   name=""
                   id="view"
                   class="btn btn-primary"
-                  href="#"
+                  href="/categories"
                   role="button"
                   >VIEW PITCHES</a
                 >
@@ -75,7 +75,7 @@
                   name=""
                   id="add"
                   class="btn btn-primary"
-                  href="#"
+                  href="/add"
                   role="button"
                   >ADD PITCH</a
                 >
@@ -109,7 +109,7 @@
                   name=""
                   id="add"
                   class="btn btn-primary"
-                  href="#"
+                  href="/add"
                   role="button"
                   >ADD PITCH</a
                 >
@@ -135,7 +135,7 @@
                   name=""
                   id="add"
                   class="btn btn-primary"
-                  href="#"
+                  href="/add"
                   role="button"
                   >ADD PITCH</a
                 >
