--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -5,15 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    crossorigin="anonymous"
+  />
+  {%extends 'base.html'%} {% block styles%}{{super()}}
+  <link
+    rel="stylesheet"
+    href="{{url_for('static',filename='css/style.css')}}"
+  />
+  {%endblock%}
   <body>
     {%block content%}
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
-        {%if category%} {%for cat in category%}
-        <div class="col-lg-2">{{cat.pitch_title}}{{cat.pitch_content}}</div>
-        <div class="col-lg-8"></div>
         <div class="col-lg-2"></div>
-        {%endfor %} {%endif%}
+        <div class="col-lg-8">
+          {%if category%} {%for cat in category%}
+
+          <div class="card-deck cats">
+            <div class="card cats">
+              <div class="card-body">
+                <h4 class="card-title">{{cat.pitch_title}}</h4>
+                <p class="card-text">{{cat.pitch_content}}</p>
+              </div>
+            </div>
+          </div>
+          {%endfor %} {%endif%}
+        </div>
+        <div class="col-lg-2"></div>
       </div>
     </div>
     {%endblock%}
