--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -30,6 +30,22 @@
               <div class="card-body">
                 <h4 class="card-title">{{cat.pitch_title}}</h4>
                 <p class="card-text">{{cat.pitch_content}}</p>
+                <a
+                  name=""
+                  id="upvote"
+                  class="btn btn-primary"
+                  href="#"
+                  role="button"
+                  >UP VOTE</a
+                >
+                <a
+                  name=""
+                  id="downvote"
+                  class="btn btn-primary"
+                  href="#"
+                  role="button"
+                  >DOWN VOTE</a
+                >
               </div>
             </div>
           </div>
