--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -26,7 +26,7 @@
       <div class="row">
         <!-- displaying  Username-->
 
-        <div class="col-md-4">
+        <div class="col-lg-4 profpic">
           <h3>{{user.username| capitalize}}</h3>
 
           <!--Displaying user bio-->
@@ -38,7 +38,7 @@
         </div>
 
         <!--Display profile photo-->
-        <div class="col-md-4">
+        <div class="col-lg-2 profpic">
           {% if user.profile_pic_path %}
           <img
             src="{{url_for('static',filename=user.profile_pic_path)}}"
@@ -64,6 +64,12 @@
         </div>
       </div>
     </div>
-    {% endblock %}
+      <div class"col-lg-8">
+
+    {%block userpitch%}{%include
+    'profile/pitchCats.html'%}{%endblock%}
+    </div>
+    {%endblock%} 
+  
   </body>
 </html>
