add pitches created to profile

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -103,3 +103,10 @@
     height: 10vw;
     background-color: red;
 }
+
+
+/* PROFILE TEMPLATE  */
+
+#mypitches ul li {
+    list-style-type: none;
+}
